--- a/2_lab/nb.ipynb
+++ b/2_lab/nb.ipynb
@@ -147,6 +147,109 @@
    "source": [
     "Поки ми дивились лише на вбудовані класи та обєкти які програмісти створювали до нас. Однак ми також можемо описувати певні явища і створювати класти та обєкти. Далі давайте створимо власне наш перший клас."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ще клас можна уявити собі як шаблон а відповідно обєкт це кокретна \"річ\" зроблена по шаблону.\n",
+    "Ми спробуємо описати у програмі Мечів та процес отримання конкретного меча гарвцем."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "моделюємо випадання якогось числа, що буде вказувати на меч\n",
+      "Вітаємо, Вам випав меч! Стати:\n",
+      "Назва: довгий меч\n",
+      "Рідкість: Blue\n",
+      "Дамаг: +5\n",
+      "Витривалість: +10\n"
+     ]
+    }
+   ],
+   "source": [
+    "swords_name = [\"короткий меч\", \"довгий меч\", \"катана\", \"рапіра\"]\n",
+    "swords_rarity = [\"Green\", \"Blue\", \"Exotic\", \"Epic\"]\n",
+    "swords_damag = [2, 5, 3, 5]\n",
+    "swords_vitality = [10, 10, 15, 20]\n",
+    "\n",
+    "from random import randint\n",
+    "print(f\"моделюємо випадання якогось числа, що буде вказувати на меч\")\n",
+    "i = randint(0, len(swords_name)-1)\n",
+    "print(f\"Вітаємо, Вам випав меч! Стати:\\nНазва: {swords_name[i]}\\nРідкість: {swords_rarity[i]}\\nДамаг: +{swords_damag[i]}\\nВитривалість: +{swords_vitality[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Давайте спробуємо зробити такий самий меч тільки з використанням ООП, у самий найпростіший спосіб з використанням динмічних атрибутів"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вітаємо, Вам випав меч! Стати:\n",
+      "Назва: катана\n",
+      "Рідкість: Exotic\n",
+      "Дамаг: +3\n",
+      "Витривалість: +15\n",
+      "Унікальна характеристика: Берсерк\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Swords:\n",
+    "    pass\n",
+    "\n",
+    "# створюємо перший обєкт класу Мечі\n",
+    "s1 = Swords()\n",
+    "# Дигнамічно задаємо атрибути\n",
+    "s1.name = \"короткий меч\"\n",
+    "s1.rarity = \"Green\"\n",
+    "s1.damag = 2\n",
+    "s1.vitality = 10\n",
+    "s1.bonus = \"Немає\"\n",
+    "\n",
+    "s2 = Swords()\n",
+    "s2.name = \"довгий меч\"\n",
+    "s2.rarity = \"Blue\"\n",
+    "s2.damag = 5\n",
+    "s2.vitality = 10\n",
+    "s2.bonus = \"Спритність\"\n",
+    "\n",
+    "s3 = Swords()\n",
+    "s3.name = \"катана\"\n",
+    "s3.rarity = \"Exotic\"\n",
+    "s3.damag = 3\n",
+    "s3.vitality = 15\n",
+    "s3.bonus = \"Берсерк\"\n",
+    "\n",
+    "s4 = Swords()\n",
+    "s4.name = \"рапіра\"\n",
+    "s4.rarity = \"Epic\"\n",
+    "s4.damag = 5\n",
+    "s4.vitality = 20\n",
+    "s4.bonus = \"Швидкі удари\"\n",
+    "\n",
+    "swords = [s1, s2, s3, s4]\n",
+    "i = randint(0, len(swords)-1)\n",
+    "s = swords[i]\n",
+    "print(f\"Вітаємо, Вам випав меч! Стати:\\nНазва: {s.name}\\nРідкість: {s.rarity}\\nДамаг: +{s.damag}\\nВитривалість: +{s.vitality}\\nУнікальна характеристика: {s.bonus}\")"
+   ]
   }
  ],
  "metadata": {
