--- a/2_lab/nb.ipynb
+++ b/2_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -249,6 +249,118 @@
     "i = randint(0, len(swords)-1)\n",
     "s = swords[i]\n",
     "print(f\"Вітаємо, Вам випав меч! Стати:\\nНазва: {s.name}\\nРідкість: {s.rarity}\\nДамаг: +{s.damag}\\nВитривалість: +{s.vitality}\\nУнікальна характеристика: {s.bonus}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "У попередньому прикладі, клас був пустим і всі його аргументи задавались динамічно. В такому варіанті створення обєктів не гарантується що обєкти будуть однакові, та містити в собі спільні поля.\n",
+    "\n",
+    "Дану інформацію видає ChatGPT розповідаючи що таке методи __init__ та __new__ .\n",
+    "\n",
+    "> У Пайтоні конструктор класу - це спеціальний метод з ім'ям __init__. Цей метод викликається автоматично при створенні нового об'єкта цього класу. Він призначений для ініціалізації атрибутів об'єкта.\n",
+    "\n",
+    "> Метод __new__ в Python є статичним методом класу, який викликається для створення нового екземпляра класу перед тим, як буде викликаний метод __init__. Його основна функція - це створення нового об'єкта. Він приймає клас (як аргумент cls) та будь-які інші аргументи, які передаються підчас створення екземпляру.\n",
+    "\n",
+    "Тому, всі атрибути/поля потрібно передбачати в класі який виступає шаблоном обєкта"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000001FC53249CD0>\n",
+      "В якого є атрибути {'name': 'Короткий меч', 'rarity': 'Green', 'damag': 2, 'vitality': 10, 'bonus': None}\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000001FC5321C650>\n",
+      "В якого є атрибути {'name': 'Довгий меч', 'rarity': 'Blue', 'damag': 5, 'vitality': 10, 'bonus': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Swords:\n",
+    "    def __init__(self, name:str, rarity:str, damag:int, vitality:int, bonus:str = None) -> None:\n",
+    "        \"\"\"Конструктор для створення обєкту Меч.\n",
+    "        name: поля для імені;\n",
+    "        rarity: Рідкість предмету; \n",
+    "        damag: ;\n",
+    "        vitality: ;\n",
+    "        bonus: необовязковий аргумент;\n",
+    "        \"\"\"\n",
+    "        self.name = name\n",
+    "        self.rarity = rarity\n",
+    "        self.damag = damag\n",
+    "        self.vitality = vitality\n",
+    "        self.bonus = bonus\n",
+    "    \n",
+    "    def get_baff_damag(self, damag:int) -> str:\n",
+    "        self.damag += damag\n",
+    "        return f\"Накладено баф на {self.name} який додає атрибут нанесення шкоди +{damag}\"\n",
+    "    \n",
+    "    def attack(self, item:Swords = None) -> str:\n",
+    "        \"\"\"Медод для атаки\n",
+    "        \"\"\"\n",
+    "        if isinstance(item, Swords):\n",
+    "            item.vitality -= self.damag\n",
+    "            return f\"Нанесено шкоду {self.damag} мечу {item.name}\"\n",
+    "        else:\n",
+    "            return \"Ми промахнулись!\"\n",
+    "        \n",
+    "    def parry(self, damage) -> int:\n",
+    "        \"\"\"Метод для парирування\n",
+    "        \"\"\"\n",
+    "        self.vitality -= damage\n",
+    "        return self.vitality\n",
+    "\n",
+    "a = Swords(\"Короткий меч\", \"Green\", 2, 10)\n",
+    "b = Swords(\"Довгий меч\", \"Blue\", 5, 10)\n",
+    "# b = Swords.__init__() # тут виникне помилка, бо ми не передаємо вказівник на обєкт\n",
+    "# print(a.__init__()) # це був приклад для пояснення self, зараз він не працює\n",
+    "\n",
+    "for item in [a, b]:\n",
+    "    print(type(item), f\"Створено обєкт {item}\\nВ якого є атрибути {item.__dict__}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Створений клас є класичною основою створення класів у Пайтон, ми використали метод `__init__` та прописали всі атрибути якими повинен володіти обєкт нашого класу.\n",
+    "Для взаємодії або якщо ми хочемо здійснювати певні дії над мечем або власне викликати дії самого меча, ми повинні створювати так звані методи.\n",
+    "Створимо метод який накладає баф на наш меч.\n",
+    "Створимо методи який буде атакувати з нашим мечем."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Початкове значення шкоди меча Короткий меч має значення 2\n",
+      "Накладено баф на Короткий меч який додає атрибут нанесення шкоди +2\n",
+      "Після накладення бафу на меч Короткий меч шкода буде мати значення 4 та витривалість меча 10\n",
+      "Після того як Довгий меч з шкодою 5 наніс удар Короткий меч в нас залишилось витривалості 5\n",
+      "Завдаємо удару у відповідь Короткий меч по Довгий меч, будемо мати Нанесено шкоду 4 мечу Довгий меч. Після атаки витривалість Довгий меч буде 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Swords(\"Короткий меч\", \"Green\", 2, 10)\n",
+    "b = Swords(\"Довгий меч\", \"Blue\", 5, 10)\n",
+    "print(f\"Початкове значення шкоди меча {a.name} має значення {a.damag}\")\n",
+    "print(a.get_baff_damag(2))\n",
+    "print(f\"Після накладення бафу на меч {a.name} шкода буде мати значення {a.damag} та витривалість меча {a.vitality}\")\n",
+    "print(f\"Після того як {b.name} з шкодою {b.damag} наніс удар {a.name} в нас залишилось витривалості {a.parry(b.damag)}\")\n",
+    "print(f\"Завдаємо удару у відповідь {a.name} по {b.name}, будемо мати {a.attack(b)}. Після атаки витривалість {b.name} буде {b.vitality}\")"
    ]
   }
  ],
