--- a/2_lab/nb.ipynb
+++ b/2_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -203,11 +203,11 @@
      "output_type": "stream",
      "text": [
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: катана\n",
-      "Рідкість: Exotic\n",
-      "Дамаг: +3\n",
-      "Витривалість: +15\n",
-      "Унікальна характеристика: Берсерк\n"
+      "Назва: короткий меч\n",
+      "Рідкість: Green\n",
+      "Дамаг: +2\n",
+      "Витривалість: +10\n",
+      "Унікальна характеристика: Немає\n"
      ]
     }
    ],
@@ -268,23 +268,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000001FC53249CD0>\n",
-      "В якого є атрибути {'name': 'Короткий меч', 'rarity': 'Green', 'damag': 2, 'vitality': 10, 'bonus': None}\n",
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000001FC5321C650>\n",
-      "В якого є атрибути {'name': 'Довгий меч', 'rarity': 'Blue', 'damag': 5, 'vitality': 10, 'bonus': None}\n"
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000015B20842090>\n",
+      "В якого є атрибути {'name': 'Короткий меч', 'rarity': 'Green', 'damag': 2, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0}\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000015B20841250>\n",
+      "В якого є атрибути {'name': 'Довгий меч', 'rarity': 'Blue', 'damag': 5, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0}\n"
      ]
     }
    ],
    "source": [
     "class Swords:\n",
-    "    def __init__(self, name:str, rarity:str, damag:int, vitality:int, bonus:str = None) -> None:\n",
+    "    who_has_buff = [] # Ця класова змінна відслідковує на які обєкти зараз накладено баф\n",
+    "    \n",
+    "    def __init__(self, name:str, rarity:str, damag:int, vitality:int, bonus:str = None) -> None: # Це є свого роду конструктор\n",
     "        \"\"\"Конструктор для створення обєкту Меч.\n",
     "        name: поля для імені;\n",
     "        rarity: Рідкість предмету; \n",
@@ -292,29 +294,79 @@
     "        vitality: ;\n",
     "        bonus: необовязковий аргумент;\n",
     "        \"\"\"\n",
-    "        self.name = name\n",
+    "        self.name = name # це є атрибути обєкта, їх можна змінювати після створення обєкту\n",
     "        self.rarity = rarity\n",
     "        self.damag = damag\n",
     "        self.vitality = vitality\n",
     "        self.bonus = bonus\n",
+    "\n",
+    "        self.buff_damage = 0\n",
+    "        self.buff_vitality = 0\n",
     "    \n",
-    "    def get_baff_damag(self, damag:int) -> str:\n",
-    "        self.damag += damag\n",
+    "    def get_buff_damag(self, damag:int) -> str:\n",
+    "        if self.__hash__ in Swords.who_has_buff:\n",
+    "            return f\"На меч {self.name} вже накладено баф\"\n",
+    "        self.buff_damage = damag\n",
+    "        Swords.who_has_buff.append(self.__hash__)\n",
     "        return f\"Накладено баф на {self.name} який додає атрибут нанесення шкоди +{damag}\"\n",
     "    \n",
+    "    def get_buff_vitality(self, vitality:int) -> str:\n",
+    "        if self.__hash__ in Swords.who_has_buff:\n",
+    "            return f\"На меч {self.name} вже накладено баф\"\n",
+    "        self.vitality += vitality\n",
+    "        self.buff_vitality = vitality\n",
+    "        Swords.who_has_buff.append(self.__hash__)\n",
+    "        return f\"Накладено баф на {self.name} який додає атрибут здоровя +{vitality}, загальне здоровя: {self.vitality}\"\n",
+    "    \n",
+    "    def expired_buff(self) -> str:\n",
+    "        Swords.who_has_buff.remove(self.__hash__)\n",
+    "        if self.buff_damage > 0:\n",
+    "            self.buff_damage = 0\n",
+    "            return \"Дія бафу на нанасення шкоди завершилась!\"\n",
+    "        if self.buff_vitality > 0:\n",
+    "            self.vitality -= self.buff_vitality\n",
+    "            self.buff_vitality = 0\n",
+    "            return \"Дія бафу на здоровя завершилась!\"\n",
+    "        return \"На мечі не має ніякого бафу!\"\n",
+    "    \n",
     "    def attack(self, item:Swords = None) -> str:\n",
-    "        \"\"\"Медод для атаки\n",
+    "        \"\"\"Метод для атаки\n",
     "        \"\"\"\n",
     "        if isinstance(item, Swords):\n",
-    "            item.vitality -= self.damag\n",
-    "            return f\"Нанесено шкоду {self.damag} мечу {item.name}\"\n",
+    "            item.vitality -= self.hit\n",
+    "            return f\"Нанесено шкоду {self.hit} мечу {item.name}\"\n",
     "        else:\n",
     "            return \"Ми промахнулись!\"\n",
     "        \n",
     "    def parry(self, damage) -> int:\n",
-    "        \"\"\"Метод для парирування\n",
+    "        \"\"\"Метод для парирування, тут в нас є бага, ми не можемо зменшувати проперті health\n",
     "        \"\"\"\n",
     "        self.vitality -= damage\n",
+    "        return self.vitality\n",
+    "    \n",
+    "    @property \n",
+    "    def get_name(self) -> str:\n",
+    "        \"\"\"Повертає значення імені. І тут проперті змінювати не можна! Це моле лише для читання.\"\"\"\n",
+    "        return self.name\n",
+    "    \n",
+    "    @property\n",
+    "    def info(self) -> str:\n",
+    "        \"\"\"Проперті для читання, виводить інформацію про обєкт.\"\"\"\n",
+    "        return f\"\"\"\\n<<<<<Стати:\n",
+    "        Назва: {self.get_name}\n",
+    "        Рідкість: {self.rarity}\n",
+    "        Дамаг: +{self.hit}\n",
+    "        Витривалість: +{self.health}\n",
+    "        Унікальна характеристика: {self.bonus}>>>>>\\n\"\"\"\n",
+    "\n",
+    "    @property\n",
+    "    def hit(self):\n",
+    "        \"\"\"Проперті яка визначає загальне значення нанесення шкоди\"\"\"\n",
+    "        return self.damag + self.buff_damage\n",
+    "    \n",
+    "    @property\n",
+    "    def health(self):\n",
+    "        \"\"\"Проперті яка визначає всю витривалість ХП який має обєкт\"\"\"\n",
     "        return self.vitality\n",
     "\n",
     "a = Swords(\"Короткий меч\", \"Green\", 2, 10)\n",
@@ -338,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +399,7 @@
      "text": [
       "Початкове значення шкоди меча Короткий меч має значення 2\n",
       "Накладено баф на Короткий меч який додає атрибут нанесення шкоди +2\n",
-      "Після накладення бафу на меч Короткий меч шкода буде мати значення 4 та витривалість меча 10\n",
+      "Після накладення бафу на меч Короткий меч шкода буде мати значення 2 та витривалість меча 10\n",
       "Після того як Довгий меч з шкодою 5 наніс удар Короткий меч в нас залишилось витривалості 5\n",
       "Завдаємо удару у відповідь Короткий меч по Довгий меч, будемо мати Нанесено шкоду 4 мечу Довгий меч. Після атаки витривалість Довгий меч буде 6\n"
      ]
@@ -357,10 +409,83 @@
     "a = Swords(\"Короткий меч\", \"Green\", 2, 10)\n",
     "b = Swords(\"Довгий меч\", \"Blue\", 5, 10)\n",
     "print(f\"Початкове значення шкоди меча {a.name} має значення {a.damag}\")\n",
-    "print(a.get_baff_damag(2))\n",
+    "print(a.get_buff_damag(2))\n",
     "print(f\"Після накладення бафу на меч {a.name} шкода буде мати значення {a.damag} та витривалість меча {a.vitality}\")\n",
     "print(f\"Після того як {b.name} з шкодою {b.damag} наніс удар {a.name} в нас залишилось витривалості {a.parry(b.damag)}\")\n",
     "print(f\"Завдаємо удару у відповідь {a.name} по {b.name}, будемо мати {a.attack(b)}. Після атаки витривалість {b.name} буде {b.vitality}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ми змогли переписати атрибут rarity та змінити його на Epic\n",
+      "Ми можемо вивести проперті яка дає відомості про меч:\n",
+      "\n",
+      "<<<<<Стати:\n",
+      "        Назва: Короткий меч\n",
+      "        Рідкість: Epic\n",
+      "        Дамаг: +4\n",
+      "        Витривалість: +5\n",
+      "        Унікальна характеристика: None>>>>>\n",
+      "\n",
+      "\n",
+      "<<<<<Стати:\n",
+      "        Назва: Довгий меч\n",
+      "        Рідкість: Blue\n",
+      "        Дамаг: +5\n",
+      "        Витривалість: +6\n",
+      "        Унікальна характеристика: None>>>>>\n",
+      " Накладено баф на Довгий меч який додає атрибут здоровя +1, загальне здоровя: 7 \n",
+      "<<<<<Стати:\n",
+      "        Назва: Довгий меч\n",
+      "        Рідкість: Blue\n",
+      "        Дамаг: +5\n",
+      "        Витривалість: +7\n",
+      "        Унікальна характеристика: None>>>>>\n",
+      " Дія бафу на здоровя завершилась! \n",
+      "<<<<<Стати:\n",
+      "        Назва: Довгий меч\n",
+      "        Рідкість: Blue\n",
+      "        Дамаг: +5\n",
+      "        Витривалість: +6\n",
+      "        Унікальна характеристика: None>>>>>\n",
+      " Накладено баф на Довгий меч який додає атрибут нанесення шкоди +4 \n",
+      "<<<<<Стати:\n",
+      "        Назва: Довгий меч\n",
+      "        Рідкість: Blue\n",
+      "        Дамаг: +9\n",
+      "        Витривалість: +6\n",
+      "        Унікальна характеристика: None>>>>>\n",
+      "\n",
+      "Нанесено шкоду 9 мечу Короткий меч\n",
+      "\n",
+      "<<<<<Стати:\n",
+      "        Назва: Короткий меч\n",
+      "        Рідкість: Epic\n",
+      "        Дамаг: +4\n",
+      "        Витривалість: +-4\n",
+      "        Унікальна характеристика: None>>>>>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.rarity = \"Epic\"\n",
+    "print(f\"Ми змогли переписати атрибут rarity та змінити його на {a.rarity}\")\n",
+    "\n",
+    "#a.get_name = \"Щось інше\" # тут буде видавати помилку бо проперті не можна перевизначати\n",
+    "print(\"Ми можемо вивести проперті яка дає відомості про меч:\")\n",
+    "print(a.info)\n",
+    "\n",
+    "print(b.info, b.get_buff_vitality(1), b.info, b.expired_buff(), b.info, b.get_buff_damag(4), b.info)\n",
+    "print(b.attack(a))\n",
+    "print(a.info)"
    ]
   }
  ],
