--- a/2_lab/nb.ipynb
+++ b/2_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -167,10 +167,10 @@
      "text": [
       "моделюємо випадання якогось числа, що буде вказувати на меч\n",
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: довгий меч\n",
-      "Рідкість: Blue\n",
-      "Дамаг: +5\n",
-      "Витривалість: +10\n"
+      "Назва: катана\n",
+      "Рідкість: Exotic\n",
+      "Дамаг: +3\n",
+      "Витривалість: +15\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -203,11 +203,11 @@
      "output_type": "stream",
      "text": [
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: короткий меч\n",
-      "Рідкість: Green\n",
-      "Дамаг: +2\n",
+      "Назва: довгий меч\n",
+      "Рідкість: Blue\n",
+      "Дамаг: +5\n",
       "Витривалість: +10\n",
-      "Унікальна характеристика: Немає\n"
+      "Унікальна характеристика: Спритність\n"
      ]
     }
    ],
@@ -268,23 +268,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000015B20842090>\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000002A7BED168D0>\n",
       "В якого є атрибути {'name': 'Короткий меч', 'rarity': 'Green', 'damag': 2, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0}\n",
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000015B20841250>\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000002A7BEE39390>\n",
       "В якого є атрибути {'name': 'Довгий меч', 'rarity': 'Blue', 'damag': 5, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0}\n"
      ]
     }
    ],
    "source": [
+    "from random import choice\n",
+    "\n",
     "class Swords:\n",
     "    who_has_buff = [] # Ця класова змінна відслідковує на які обєкти зараз накладено баф\n",
+    "    rarity_map = {\"Basic\": 1, \"Green\": 2, \"Blue\": 5, \"Epic\": 8, \"Legend\": 10} # Це мапа яка вказує коефіцієнт збільшення атрибутів відносно Рідкісності предмету\n",
     "    \n",
     "    def __init__(self, name:str, rarity:str, damag:int, vitality:int, bonus:str = None) -> None: # Це є свого роду конструктор\n",
     "        \"\"\"Конструктор для створення обєкту Меч.\n",
@@ -302,6 +305,19 @@
     "\n",
     "        self.buff_damage = 0\n",
     "        self.buff_vitality = 0\n",
+    "\n",
+    "    @classmethod\n",
+    "    def create_from_rarity(cls, name:str, rarity:str):\n",
+    "        \"\"\"Це конструктор використовуємо коли ми отримуємо меч з крафту\"\"\"\n",
+    "        if rarity in cls.rarity_map.keys():\n",
+    "            return cls(name, rarity, damag=3*cls.rarity_map[rarity], vitality=5*cls.rarity_map[rarity])\n",
+    "        raise AttributeError(f\"Неправильно задано рідкісність предмету, повинно бути один з {list(cls.rarity_map.keys())}\")\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def create_random_rarity(cls, name:str):\n",
+    "        \"\"\"Тут ми випадково вибили меч з Боса\"\"\"\n",
+    "        rarity = choice(list(cls.rarity_map.keys()))\n",
+    "        return cls.create_from_rarity(name, rarity)\n",
     "    \n",
     "    def get_buff_damag(self, damag:int) -> str:\n",
     "        if self.__hash__ in Swords.who_has_buff:\n",
@@ -390,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -486,6 +502,50 @@
     "print(b.info, b.get_buff_vitality(1), b.info, b.expired_buff(), b.info, b.get_buff_damag(4), b.info)\n",
     "print(b.attack(a))\n",
     "print(a.info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Розглядаємо Класові методи (альтернативні конструктори)\n",
+    "> Класові методи дозволяють урізноманітнити як саме ми можемо створювати наші обєкти;\n",
+    "> для прикладу, ми можемо задати трохи інакший розподіл якихось з атрибутів"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Swords'> \n",
+      "<<<<<Стати:\n",
+      "        Назва: Катана\n",
+      "        Рідкість: Blue\n",
+      "        Дамаг: +15\n",
+      "        Витривалість: +25\n",
+      "        Унікальна характеристика: None>>>>>\n",
+      "\n",
+      "<class '__main__.Swords'> \n",
+      "<<<<<Стати:\n",
+      "        Назва: Шпага\n",
+      "        Рідкість: Green\n",
+      "        Дамаг: +6\n",
+      "        Витривалість: +10\n",
+      "        Унікальна характеристика: None>>>>>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = Swords.create_from_rarity(\"Катана\", \"Blue\")\n",
+    "print(type(c), c.info)\n",
+    "d = Swords.create_random_rarity(\"Шпага\")\n",
+    "print(type(d), d.info)"
    ]
   }
  ],
